# interactive_portfolio_optimization

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_environment_and_conventions.ipynb  01_binomial_pricing_and_replication.ipynb  02_black_scholes_and_implied_vol.ipynb  03_monte_carlo_pricing_and_sde_discretization.ipynb  04_pde_finite_difference_pricing.ipynb  05_delta_hedging_error_lab.ipynb  06_model_risk_stochastic_vol_smile.ipynb  07_fx_option_pricing.ipynb  08_portfolio_with_option_overlay.ipynb  09_asml_real_data_capstone.ipynb
results/reports/: 09_asml_capstone_summary.md
sources/: SOURCES.md
src/: __init__.py  binomial.py  black_scholes.py  config.py  fx_options.py  hedging.py  implied_vol.py  interactive.py  market_data.py  metrics.py  monte_carlo.py  pde_fd.py  plotting.py  portfolio_overlay.py  processes.py  sde.py  stoch_vol.py  utils.py
tests/: test_binomial.py  test_black_scholes.py  test_fx.py  test_hedging.py  test_implied_vol.py  test_market_data.py  test_metrics.py  test_monte_carlo.py  test_pde_fd.py
