[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derivatives-risk-lab"
version = "0.1.0"
description = "Educational toolkit for pricing, hedging, and portfolio risk under model uncertainty"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Derivatives Risk Lab" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "ipywidgets>=8.0",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
